<resources>
    <string name="app_name">NetworkedScoreTracker</string>
    <string name="Title">Networked Score Tracker</string>
    <string name="PlayerLabel">Player:</string>
    <string name="PlayerHint">Player Name</string>
    <string name="NewGame_button">New Game</string>
    <string name="JoinGame_button">Join Game</string>
    <string name="NewGameTitle_textView">New Game!</string>
    <string name="hostLabel">Host:</string>
    <string name="LifeTotalLabel">Life:</string>
    <string name="loseGameButtonText">Lose</string>
    <string name="startGameServerButton">Start Game!</string>
    <string name="joinedPlayersLabel">Joined Players:</string>
    <string name="plus5Button">+5</string>
    <string name="minus5Button">-5</string>
    <string name="plus1Button">+1</string>
    <string name="minus1Button">-1</string>
    <string name="submitButton">Submit</string>
    <string name="searchForGameButton">Search for game</string>
</resources>
